--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,7 +88,10 @@
 
 /* Estilos del Footer */
 .footer {
-  height: 8vh;
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+  height: auto;
   background-color: #000;
   color: white;
   text-align: center;
@@ -100,4 +103,10 @@
 
 .footer p {
   font-size: 18px;
+}
+
+.footer div img {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
 }
